<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.comida.Registro">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titulo"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="normal|bold" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registrocliente"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/txtNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/identificaion"
                    android:inputType="textPersonName" />

                <Button
                    android:id="@+id/cmdBuscar"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="buscar"
                    android:text="@string/buscar" />

            </LinearLayout>

            <EditText
                android:id="@+id/txtApellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/nombre"
                android:inputType="none"
                android:editable="false"/>

            <TextView
                android:id="@+id/txtView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pedido"
                android:textSize="18sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/chkPerros"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/perro" />

            <CheckBox
                android:id="@+id/chkHamb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hamburguesa" />

            <CheckBox
                android:id="@+id/chkPizza"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pizza" />

            <Spinner
                android:id="@+id/cmbPedido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bebida"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/cmbBebida"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <RadioButton
                    android:id="@+id/r1cc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/cocacola" />

                <RadioButton
                    android:id="@+id/r2pep"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pepsi" />

                <RadioButton
                    android:id="@+id/r3pos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/postobon" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/cmbMeseros"></Spinner>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/cmdGuardar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="guardar"
                    android:text="@string/guardar" />

                <Button
                    android:id="@+id/cmdBorrar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="borrar"
                    android:text="@string/borrar" />
            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/cmdModificar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/modificar"
                    android:visibility="gone"/>

                <Button
                    android:id="@+id/cmdEliminar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/eliminar"
                    android:onClick="elimiar"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
